@@ -5,6 +5,7 @@
 #include "memory.h"
 #include "namespaces.h"
 #include "node.h"
+#include "ntriples.h"
 #include "sink.h"
 #include "string_utils.h"
 #include "try.h"
@@ -393,6 +394,12 @@ write_uri(SerdWriter* const writer,
     result.read_count += len;
     if ((i = j) == n_bytes) {
       break; // Reached end
+    }
+
+    const uint8_t c = utf8[i];
+    if (c >= 0x20U && c < 0x80U && !is_IRIREF(c)) {
+      result.status = SERD_BAD_URI;
+      break;
     }
 
     // Write character (escape or UTF-8)
