@@ -1,0 +1,1 @@
+<http://example.org/s> <http://example.org/p> <http://example.org/\u005E> .
