@@ -1,2 +1,1 @@
 <http://example.org/eg#s> <http://example.org/eg#p> "\\\r\n\t" .
-<http://example.org/eg#s> <http://example.org/eg#p> <http://example.org/\u005C> .
