@@ -1,0 +1,1 @@
+<http://example.org/eg#s> <http://example.org/eg#p> <scheme:%20!%22#$%25&'()*+,-./0123456789:;%3C=%3E?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[%5C]%5E_%60abcdefghijklmnopqrstuvwxyz%7B%7C%7D~%7F> .
