@@ -1,0 +1,2 @@
+<http://example.org/node>
+	<http://example.org/prop> <scheme:%20!%22#$%&'()*+,-./0123456789:/%3C=%3E?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[%5C]%5E_%60abcdefghijklmnopqrstuvwxyz%7B%7C%7D~%7F> .
